# Rw-Tools

./: package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ip_commands.rs  lib.rs
src/layout/: AppMenu.vue
src/router/: index.js
src/service/: IpFieldService.js
src/views/uikit/: IpTranslation.vue
